--- a/index.html
+++ b/index.html
@@ -44,14 +44,10 @@
             </p>
           </div>
 
-          <div id="social" class="card text-center">
-            <h1>Social Fredrik</h1>
-            <ul>
-              <li><i class="fa fa-facebook" aria-hidden="true"></i><a href="http://www.facebook.com" target="blank">Facebook</a></li>
-              <li><i class="fa fa-medium" aria-hidden="true"></i><a href="http://www.medium.com" target="blank">Medium</a></li>
-              <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="http://www.instagram.com" target="blank">Instagram</a></li>
-            </ul>
+          <div>
+
           </div>
+
         </div>
 
         <div id="right">
@@ -92,6 +88,16 @@
 
         </div>
         <div id="clear">
+        </div>
+        <div id="footer">
+          <div id="social" class="card text-center">
+            <h1>Social Fredrik</h1>
+            <ul>
+              <li><i class="fa fa-facebook" aria-hidden="true"></i><a href="http://www.facebook.com" target="blank">Facebook</a></li>
+              <li><i class="fa fa-medium" aria-hidden="true"></i><a href="http://www.medium.com" target="blank">Medium</a></li>
+              <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="http://www.instagram.com" target="blank">Instagram</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
