--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <!-- Fontawesome -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <div id="sidebar">
@@ -45,7 +46,12 @@
           </div>
 
           <div>
-
+            <form action="submit">
+              <p><input type="text" name="Username" value="" placeholder="Username"></p>
+              <p><input type="password" name="password" value="" placeholder="Choose your password"></p>
+              <p><input type="password" name="cpassword" value="" placeholder="Confirm password"></p>
+              <p><input type="text" name="Email" value="" placeholder="Email"></p>
+            </form>
           </div>
 
         </div>
